infra/prod/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: gittix
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regx: "true"
spec:
  rules:
    - host: gittix.net
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port: 
                  number: 3000
          - path: /api/tickets
            pathType: Prefix  
            backend:
              service:
                name: tickets-svc
                port: 
                  number: 3000
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: orders-svc
                port: 
                  number: 3000
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payments-svc
                port: 
                  number: 3000                                                           
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-ui-svc
                port: 
                  number: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: ingress-svc
  namespace: gittix
spec:
  type: ExternalName
  externalName: ingress-nginx-controller.ingress-nginx.svc.cluster.local
